--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="scrollright">scrollRight</string>
     <string name="srcollarrow">srcollArrow</string>
     <string name="input">Перейти</string>
+    <string name="text">text</string>
 </resources>
